changed the background colour of the last homepage strio

--- a/_sass/components/_strip.scss
+++ b/_sass/components/_strip.scss
@@ -6,7 +6,7 @@
   background-color: white;
 }
 .strip-grey {
-  background-color: #DFF6FF;
+  background-color: #c080c0;
 }
 .strip-diagonal {
   transform: skewY(5deg);
